feat: adiciona requisições para rotas do backend

--- a/recnoti.html
+++ b/recnoti.html
@@ -39,5 +39,5 @@
         </div>
     </main>
 </body>
-    <script src="script-recnoti.js"></script>
+    <script src="assets/script-recnoti.js"></script>
 </html>
