--- a/recuppassword.html
+++ b/recuppassword.html
@@ -23,20 +23,26 @@
         
         <div class="page">
 
-            <form action="">
+            <form action="" id="updatePasswordForm">
+                <div class="ent">
+                    <input type="email" id="email" maxlength="45">
+                    <label for="">Email</label>
+                </div>
+                <div class="ent">
+                    <input type="password" id="currentPassword" maxlength="45">
+                    <label for="">Senha atual</label>
+                    <button type="button" id="togglePassword">Mostrar</button>
+                </div>
                 <div class="ent">
                     <input type="password" id="password" maxlength="45">
                     <label for="">Nova Senha</label>
                     <button type="button" id="togglePassword">Mostrar</button>
                 </div>
-                <div class="ent">
-                    <input type="password" id="password" maxlength="45">
-                    <label for="">Confirmar Senha</label>
-                </div>
                 <div id="submit">
                     <button type="submit" id="btnSubmit">Trocar Senha</button>
                 </div>
             </form>
+            <div id="updatePasswordResponseDiv"></div>
         </div>
     </main>
 </body>
