--- a/login.html
+++ b/login.html
@@ -34,16 +34,13 @@
                 </div>
                 <div id="submit">
                     <button type="submit">Entrar</button>
-                    <a href="recnoti.html"> Esqueci minha senha</a>
+                    <a href="recuppassword.html"> Esqueci minha senha</a>
                 </div>
                 <div id="cadastro">
                     <span>Novo no ReLaunch?</span>
                     <a href="cadastro.html">Cadastre-se agora!</a>
                 </div>
                 <div id="loginResponse">
-                    <button id="logout">
-                Sair
-                </button>
 
                 </div>
                 
