fix: reorganize project folders

--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -16,7 +16,7 @@
 
     <main>
         <div>
-            <a href="index.html" class="relaunch">
+            <a href="../home/index.html" class="relaunch">
                 <span class="primeiras-duas">Re</span>Launch
             </a>
         </div>
@@ -68,7 +68,7 @@
 
                 <div id="cadastro">
                     <span>Já faz parte do ReLaunch?</span>
-                    <a href="login.html">Entre agora!</a>
+                    <a href="../login/login.html">Entre agora!</a>
                 </div>
                 
 
