--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -16,7 +16,7 @@
 
     <main>
         <div>
-            <a href="index.html" class="relaunch">
+            <a href="../home/index.html" class="relaunch">
                 <span class="primeiras-duas">Re</span>Launch
             </a>
         </div>
@@ -34,11 +34,11 @@
                 </div>
                 <div id="submit">
                     <button type="submit">Entrar</button>
-                    <a href="recuppassword.html"> Esqueci minha senha</a>
+                    <a href="../recuppassword/recuppassword.html"> Esqueci minha senha</a>
                 </div>
                 <div id="cadastro">
                     <span>Novo no ReLaunch?</span>
-                    <a href="cadastro.html">Cadastre-se agora!</a>
+                    <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
                 </div>
                 <div id="loginResponse">
 
