--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReLaunch Project</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="project-payment.css">
+    <title>Perfil - ReLaunch</title>
+    <link rel="stylesheet" href="perfil.css">
 </head>
 <body>
-    <header>
+     <header>
         <div>
-            <a href="index.html">
-                <img src="assets/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
+            <a href="../home/index.html">
+                <img src="../../assets/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -25,66 +20,48 @@
             </svg>
         </div>
         <div class="icones">
-                <a href="projects-page.html" class="icone" id="lampada"></a>
-                <a href="" class="icone" id="sino"></a>
-                <a href="" class="icone" id="menu"></a>
-
+            <button>login</button>
+            <a href="projects-page.html" class="icone" id="lampada"></a>
+            <a href="#" class="icone" id="sino"></a>
+            <a href="#" class="icone" id="menu"></a>
         </div>
     </header>
 
     <main>
-        <nav>
-
-            <a class="item" href="project.html" >
-                Projeto
-            </a>
-            <a  class="item" href="project-chat.html" class="item">
-                Bate-Papo
-            </a>
-            <a  class="item" href="project-payment.html">
-                Pagamento
-            </a>
-            <a  class="item" href="project-file.html">
-                Arquivos
-            </a>
-            
-        </nav>
-        <section>
-            <div>
-                <div id="confimacao-banco">
-                    Aguardando confirmação do banco...
+        <section class="perfil-container">
+            <div class="perfil-esquerda">
+                <div class="avatar"><img src="../../assets/fotop7.PNG" alt=""></div>
+                <div class="info">
+                    <h2>Fernando Augusto Martins de Souza</h2>
+                    <p>
+                        Desenvolvedor Full Stack apaixonado por tecnologia e inovação.
+                         Tenho experiência em criação de aplicações web, desde o planejamento do backend até a construção de
+                          interfaces modernas e responsivas no frontend. 
+                        Busco constantemente aprender novas ferramentas e linguagens para entregar soluções 
+                        eficientes e de impacto.
+                    </p>
+                    <div class="tags">
+                        <span class="tag backend">Backend</span>
+                        <span class="tag frontend">Frontend</span>
+                        <span class="tag web">Web</span>
+                    </div>
                 </div>
             </div>
-            <div id="qr-code">
-                <img src="" alt="">
-            </div>
-            <div>
-                <button id="chave-pix">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#46B1D5" d="M288 64C252.7 64 224 92.7 224 128L224 384C224 419.3 252.7 448 288 448L480 448C515.3 448 544 419.3 544 384L544 183.4C544 166 536.9 149.3 524.3 137.2L466.6 81.8C454.7 70.4 438.8 64 422.3 64L288 64zM160 192C124.7 192 96 220.7 96 256L96 512C96 547.3 124.7 576 160 576L352 576C387.3 576 416 547.3 416 512L416 496L352 496L352 512L160 512L160 256L176 256L176 192L160 192z"/></svg>
-                    Copiar chave pix
-                </button>
-            </div>
-            <div>
-            <button id="anexar-comprovante">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#46B1D5" d="M128 128C128 92.7 156.7 64 192 64L341.5 64C358.5 64 374.8 70.7 386.8 82.7L493.3 189.3C505.3 201.3 512 217.6 512 234.6L512 512C512 547.3 483.3 576 448 576L192 576C156.7 576 128 547.3 128 512L128 128zM336 122.5L336 216C336 229.3 346.7 240 360 240L453.5 240L336 122.5zM337 327C327.6 317.6 312.4 317.6 303.1 327L239.1 391C229.7 400.4 229.7 415.6 239.1 424.9C248.5 434.2 263.7 434.3 273 424.9L296 401.9L296 488C296 501.3 306.7 512 320 512C333.3 512 344 501.3 344 488L344 401.9L367 424.9C376.4 434.3 391.6 434.3 400.9 424.9C410.2 415.5 410.3 400.3 400.9 391L336.9 327z"/></svg>
-                Anexar comprovante de pagamento    
-            </button></div>
-            <div>
-                <div id="comprovante">
-                    Comprovante_24-12-2024.pdf
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#74C0FC" d="M504.6 148.5C515.9 134.9 514.1 114.7 500.5 103.4C486.9 92.1 466.7 93.9 455.4 107.5L320 270L184.6 107.5C173.3 93.9 153.1 92.1 139.5 103.4C125.9 114.7 124.1 134.9 135.4 148.5L278.3 320L135.4 491.5C124.1 505.1 125.9 525.3 139.5 536.6C153.1 547.9 173.3 546.1 184.6 532.5L320 370L455.4 532.5C466.7 546.1 486.9 547.9 500.5 536.6C514.1 525.3 515.9 505.1 504.6 491.5L361.7 320L504.6 148.5z"/></svg>
+            <div class="perfil-direita">
+                <p class="projetos">Projetos Concluídos: <span>56</span></p>
+                <div class="estrelas">
+                    ★★★★☆
                 </div>
             </div>
-            <div></div>
-            <div></div>
         </section>
-
     </main>
+<div>
 
+</div>
     <footer>
         <div>
-            <a href="index.html">
-                <img src="assets/NomeBackgroundEscuro.png" alt="" id="logo">
+            <a href="../home/index.html">
+                <img src="../../assets/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
         <div>
@@ -109,7 +86,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M173.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM252.8 8c-138.7 0-244.8 105.3-244.8 244 0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1 100-33.2 167.8-128.1 167.8-239 0-138.7-112.5-244-251.2-244zM105.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9s4.3 3.3 5.6 2.3c1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>            </a>
         </div>
         <div>
-            <img src="assets/planeta-terra.png" alt="">
+            <img src="../../assets/planeta-terra (1).png" alt="">
 
         <select id="idioma" name="idioma">
             <option value="pt" selected style="background-color: #2A3B41;" >Português</option>
@@ -118,8 +95,5 @@
 
         </div>
     </footer>
-  
 </body>
-    <script src="assets/script-project.js"></script>
-    <script src="assets/script-project-payment.js"></script>
 </html>
