--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -9,42 +9,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="recuppassword.css">
+    <link rel="stylesheet" href="recnoti.css">
 </head>
 <body>
    
 
     <main>
         <div>
-            <a href="index.html" class="relaunch">
+            <a href="../home/index.html" class="relaunch">
                 <span class="primeiras-duas">Re</span>Launch
             </a>
         </div>
         
         <div class="page">
 
-            <form action="" id="updatePasswordForm">
+            <form action="">
                 <div class="ent">
-                    <input type="email" id="email" maxlength="45">
+                    <input type="email" maxlength="60" id="emailInput">
                     <label for="">Email</label>
                 </div>
-                <div class="ent">
-                    <input type="password" id="currentPassword" maxlength="45">
-                    <label for="">Senha atual</label>
-                    <button type="button" id="togglePassword">Mostrar</button>
-                </div>
-                <div class="ent">
-                    <input type="password" id="password" maxlength="45">
-                    <label for="">Nova Senha</label>
-                    <button type="button" id="togglePassword">Mostrar</button>
-                </div>
                 <div id="submit">
-                    <button type="submit" id="btnSubmit">Trocar Senha</button>
+                    <button type="button" id="btnSubmit">Enviar Email de Recuperação</button>
+                </div>
+                <div id="cadastro">
+                    <span>Usuário não encontrado?</span>
+                    <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
                 </div>
             </form>
-            <div id="updatePasswordResponseDiv"></div>
         </div>
     </main>
 </body>
-    <script src="script-recuppassword.js"></script>
+    <script src="script-recnoti.js"></script>
 </html>
