feat: add funcionality to send password recovey email

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -34,7 +34,7 @@
                 </div>
                 <div id="submit">
                     <button type="submit">Entrar</button>
-                    <a href="../recuppassword/recuppassword.html"> Esqueci minha senha</a>
+                    <a href="../recnoti/recnoti.html"> Esqueci minha senha</a>
                 </div>
                 <div id="cadastro">
                     <span>Novo no ReLaunch?</span>
