--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -36,6 +36,7 @@
                     <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
                 </div>
             </form>
+            <div id="recnotiResponseDiv"></div>
         </div>
     </main>
 </body>
