--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="../../src/components/notifications.css">
 </head>
 <body>
    
@@ -79,5 +80,6 @@
 
     </main>
 </body>
+    <script src="../../src/scripts/notifications.js"></script>
     <script src="script-cadastro.js"></script>
 </html>
