feat: improve project

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -38,7 +38,7 @@
             <p>Conectamos talentos a oportunidades reais</p>
             <div class="banner-buttons">
                 <button>SOU FREELANCER</button>
-                <button>SOU EMPRESA</button>
+                <button>SOU CLIENTE</button>
             </div>
         </div>
     </section>
@@ -48,11 +48,11 @@
         <div class="steps">
             <div class="step">
                 <h3>1</h3>
-                <p><strong>Crie sua conta</strong><br>Cadastre-se como empresa ou freelancer</p>
+                <p><strong>Crie sua conta</strong><br>Cadastre-se como cliente ou freelancer</p>
             </div>
             <div class="step">
                 <h3>2</h3>
-                <p><strong>Publique ou procure serviços</strong><br>Empresas publicam projetos. Freelancers se candidatam</p>
+                <p><strong>Publique ou procure serviços</strong><br>Clientes publicam projetos. Freelancers se candidatam</p>
             </div>
             <div class="step">
                 <h3>3</h3>
