--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -31,7 +31,6 @@
                 <a href="" class="icone" id="lampada"></a>
                 <a href="" class="icone" id="sino"></a>
                 <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
-                <button id="logout">Sair</button>
         </div>
         
         <div id="hamburger-menu" class="hamburger-menu">
@@ -65,7 +64,7 @@
             </div>
             <div>
                 <h1>Cliente</h1>
-                <a href="">Empresa XXXX</a>
+                <a href="">Cliente XXXX</a>
             </div>
             <div>
                 <h1>Prazo</h1>
