--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -22,7 +22,6 @@
             </svg>
         </div>
         <div class="icones">
-            <button>login</button>
             <a href="" class="icone" id="lampada"></a>
             <a href="#" class="icone" id="sino"></a>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
@@ -35,9 +34,14 @@
     <main>
         <section class="perfil-container">
             <div class="perfil-esquerda">
-                <div class="avatar"><img src="../../src/images/fotop7.PNG" alt=""></div>
+                <div class="avatar">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#46B1D5" width="80" height="80">
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                    </svg>
+                </div>
                 <div class="info">
-                    <h2>Fernando Augusto Martins de Souza</h2>
+                    <h2 id="userName">Carregando...</h2>
+                    <p class="email" id="userEmail">carregando@email.com</p>
                     <p>
                         Desenvolvedor Full Stack apaixonado por tecnologia e inovação.
                          Tenho experiência em criação de aplicações web, desde o planejamento do backend até a construção de
@@ -103,4 +107,5 @@
 </body>
 <script src="../../src/scripts/notifications.js"></script>
 <script src="../../src/scripts/hamburger-menu.js"></script>
+<script src="perfil.js"></script>
 </html>
