--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -24,6 +24,7 @@
         <div class="icones">
             <a href="" class="icone" id="lampada"></a>
             <a href="#" class="icone" id="sino"></a>
+            <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
@@ -105,6 +106,7 @@
         </div>
     </footer>
 </body>
+<script src="../../src/config/env.js"></script>
 <script src="../../src/scripts/notifications.js"></script>
 <script src="../../src/scripts/hamburger-menu.js"></script>
 <script src="perfil.js"></script>
