--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -71,6 +71,11 @@
 
             <div class="caixa-input">
                 <textarea id="entradaMensagem" rows="1" placeholder="Digite sua mensagem..."></textarea>
+                <button id="btnEnviar" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
+                        <path fill="currentColor" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                    </svg>
+                </button>
             </div>
         </section>
 
@@ -115,6 +120,7 @@
     </footer>
   
 </body>
+    <script src="../../src/config/env.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
     <script src="script-project.js"></script>
