--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -25,12 +25,12 @@
         <div class="page">
             <form action="" id="loginForm">
                 <div class="ent">
-                    <input type="email" maxlength="60"name="email" id="email">
-                    <label for="">Email</label>
+                    <input type="email" maxlength="60" name="email" id="email">
+                    <label for="email">Email</label>
                 </div>
                 <div class="ent">
-                    <input type="password" id="password" maxlength="45" name="password" id="password">
-                    <label for="">Senha</label>
+                    <input type="password" id="password" maxlength="45" name="password" autocomplete="current-password">
+                    <label for="password">Senha</label>
                     <button type="button" id="togglePassword">Mostrar</button>
                 </div>
                 <div id="submit">
@@ -56,6 +56,7 @@
 
    
 </body>
+    <script src="../../src/config/env.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="script-login.js"></script>
 </html>
