--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -98,6 +98,7 @@
     </div>
   </footer>
 
+  <script src="../../src/config/env.js"></script>
   <script src="../../src/scripts/notifications.js"></script>
   <script src="../../src/scripts/hamburger-menu.js"></script>
   <script src="project-chats.js"></script>
