feat: add projects list page

--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -41,7 +41,7 @@
 
   <main>
     <nav>
-      <a href="../project/project.html" class="item">Projeto</a>
+      <a href="../project/projects-list.html" class="item">Projetos</a>
       <a href="project-chats.html" class="item active">Bate-Papo</a>
       <a href="../project-payment/project-payment-0.html" class="item">Pagamento</a>
       <a href="project-file.html" class="item">Arquivos</a>
