--- a/pages/project/projects-list.html
+++ b/pages/project/projects-list.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReLaunch Project</title>
+    <title>Meus Projetos - ReLaunch</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="projects-list.css">
     <link rel="stylesheet" href="../../src/components/notifications.css">
     <link rel="stylesheet" href="../../src/components/hamburger-menu.css">
 </head>
 <body>
     <header>
-
         <div>
             <a href="../home/index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
         <div id="pesquisa">
-            <input type="text" placeholder="Pesquisar..." />
+            <input type="text" placeholder="Pesquisar projetos..." />
             <svg class="lupa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
                 <path fill="#46B1D5" d="M480 272C480 317.9 465.1 360.3 440 394.7L566.6 521.4C579.1 533.9 579.1 554.2 566.6 566.7C554.1 579.2 533.8 579.2 521.3 566.7L394.7 440C360.3 465.1 317.9 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272zM272 416C351.5 416 416 351.5 416 272C416 192.5 351.5 128 272 128C192.5 128 128 192.5 128 272C128 351.5 192.5 416 272 416z"/>
             </svg>
@@ -39,79 +39,10 @@
     </header>
 
     <main>
-        <nav>
-            <a class="item" href="../project/projects-list.html" >
-                Projetos
-            </a>
-            <a  class="item" href="../project-chat/project-chats.html">
-                Bate-Papo
-            </a>
-            <a  class="item" href="../project-payment/project-payment-0.html">
-                Pagamento
-            </a>
-            <a  class="item" href="project-file.html">
-                Arquivos
-            </a>
-        </nav>
-        <section>
-            <div id="profile">
-                <img src="../../src/images/ReLaunch Logo.png" alt="">
-            </div>
-            <div id="desc">
-                <h1>Nome do Projeto</h1>
-                <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque consequuntur, nemo nihil iste deleniti provident laboriosam repudiandae, rerum temporibus natus blanditiis consectetur eum placeat exercitationem iure, eaque odit dicta aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam architecto tenetur accusamus officiis at nulla nesciunt corporis vitae vel reprehenderit odio laudantium non, dignissimos perferendis sit maiores placeat ipsa cupiditate!
-                </span>
-            </div>
-            <div>
-                <h1>Cliente</h1>
-                <a href="">Cliente XXXX</a>
-            </div>
-            <div>
-                <h1>Prazo</h1>
-                <label for="">30/01/2025 - 30/02/2025</label>
-            </div>
-            <div id="bar">
-            </div>
-            <div>
-                <h1>Desenvolvedor</h1>
-                <a href="">Programador Freelancer XXXX</a>
-            </div>
-            <div>
-                <h1>Tempo Restante</h1>
-                <label for="">7 Dias - 17 Horas - 23 Minutos - 34 Segundos</label>
-            </div>
-            <div>
-                <h1>
-                    Categoria
-                </h1>
-                <div id="category">
-                
-                <article>
-                    Web
-                </article>
-                <article>
-                    Front-End 
-                </article>
-                <article>
-                    Back-End
-                </article>
-                <article>
-                    Full-Stack
-                </article>
-                </div>
-            </div>
-            <div>
-                <h1>
-                    Valor
-                </h1>
-            
-                <label for="">
-                    R$XXXX.XX
-                </label>
-            </div>
-        </section>
-
+        <div class="projects-grid" id="projectsGrid">
+            <!-- Projetos serão carregados aqui -->
+        </div>
+        <p id="emptyMsg" class="empty" style="display:none;">Nenhum projeto encontrado</p>
     </main>
 
     <footer>
@@ -152,9 +83,10 @@
 
         </div>
     </footer>
-  
-</body>
+
+    <script src="../../src/config/env.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
-    <script src="script-project.js"></script>
+    <script src="projects-list.js"></script>
+</body>
 </html>
