makes the code cleaner

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -27,12 +27,8 @@
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
-        
-        <div id="hamburger-menu" class="hamburger-menu">
-        </div>
+        <div id="hamburger-menu" class="hamburger-menu"></div>
     </header>
-
-
     <section class="banner">
         <div class="banner-text">
             <h1><span>Re</span>Launch</h1>
@@ -74,8 +70,6 @@
         </div>
         <a href="#">Ver mais →</a>
     </section>
-
-
     <section class="empresas">
         <h2>EMPRESAS QUE USAM RELAUNCH</h2>
         <div class="logos">
@@ -97,9 +91,7 @@
             <div class="card"><img src="../../src/images/fotop9.PNG"><p>"Recomendo demais! Otimas empresas e otimos freelancers"</p></div>
         </div>
     </section>
-
-
-     <footer>
+    <footer>
         <div>
             <a href="index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
@@ -111,7 +103,6 @@
             <a href="">Políticas de Privacidade</a>
             </div>
         </div>
-        
         <div>
             <div>
             <a href="">Ajuda</a>
@@ -128,12 +119,10 @@
         </div>
         <div>
             <img src="../../src/images/planeta-terra (1).png" alt="">
-
-        <select id="idioma" name="idioma">
-            <option value="pt" selected style="background-color: #2A3B41;" >Português</option>
-            <option value="en" style="background-color: #2A3B41;">Inglês</option>
-        </select>            
-
+            <select id="idioma" name="idioma">
+                <option value="pt" selected style="background-color: #2A3B41;">Português</option>
+                <option value="en" style="background-color: #2A3B41;">Inglês</option>
+            </select>
         </div>
     </footer>
 </body>
