--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReLaunch Entrar</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="../../src/components/notifications.css">
 </head>
 <body>
-   
-
     <main>
         <div>
             <a href="../home/index.html" class="relaunch">
@@ -41,20 +37,10 @@
                     <span>Novo no ReLaunch?</span>
                     <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
                 </div>
-                <div id="loginResponse">
-
-                </div>
-                
-
+                <div id="loginResponse"></div>
             </form>
-
         </div>
-
-        
-
     </main>
-
-   
 </body>
     <script src="../../src/config/env.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
