feat: implement user profile editing with biography and skills management

--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -43,17 +43,12 @@
                 <div class="info">
                     <h2 id="userName">Carregando...</h2>
                     <p class="email" id="userEmail">carregando@email.com</p>
-                    <p>
-                        Desenvolvedor Full Stack apaixonado por tecnologia e inovação.
-                         Tenho experiência em criação de aplicações web, desde o planejamento do backend até a construção de
-                          interfaces modernas e responsivas no frontend. 
-                        Busco constantemente aprender novas ferramentas e linguagens para entregar soluções 
-                        eficientes e de impacto.
-                    </p>
-                    <div class="tags">
-                        <span class="tag backend">Backend</span>
-                        <span class="tag frontend">Frontend</span>
-                        <span class="tag web">Web</span>
+                    <p id="userBiografia">Adicione uma biografia</p>
+                    <div class="tags" id="userTags">
+                        <span class="tag">Adicione suas competências</span>
+                    </div>
+                    <div class="edit-profile">
+                        <a href="edit-perfil.html" class="edit-btn">Editar Perfil</a>
                     </div>
                 </div>
             </div>
