--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -39,27 +39,62 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="name">Nome</label>
-                            <input type="text" maxlength="60" name="name" id="name">
+                            <div class="input-with-edit">
+                                <input type="text" maxlength="60" name="name" id="name" readonly>
+                                <button type="button" class="edit-btn" onclick="toggleEdit('name')">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" maxlength="60" name="email" id="email">
+                            <div class="input-with-edit">
+                                <input type="email" maxlength="60" name="email" id="email" readonly>
+                                <button type="button" class="edit-btn" onclick="toggleEdit('email')">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="telefone">Telefone</label>
-                            <input type="text" maxlength="60" id="telefone">
+                            <div class="input-with-edit">
+                                <input type="text" maxlength="60" id="telefone" readonly>
+                                <button type="button" class="edit-btn" onclick="toggleEdit('telefone')">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="cpf">CPF</label>
-                            <input type="text" maxlength="60" id="cpf">
+                            <div class="input-with-edit">
+                                <input type="text" maxlength="60" id="cpf" readonly>
+                                <button type="button" class="edit-btn" onclick="toggleEdit('cpf')">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="dataInput">Data de Nascimento</label>
-                            <input type="date" id="dataInput">
+                            <div class="input-with-edit">
+                                <input type="date" id="dataInput" readonly>
+                                <button type="button" class="edit-btn" onclick="toggleEdit('dataInput')">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <div class="form-group">
                         </div>
@@ -69,14 +104,28 @@
                     <h2>Biografia</h2>
                     <div class="form-group">
                         <label for="biografia">Sobre você</label>
-                        <textarea id="biografia" maxlength="500" rows="4" placeholder="Conte um pouco sobre você, sua experiência e objetivos..."></textarea>
+                        <div class="input-with-edit">
+                            <textarea id="biografia" maxlength="500" rows="4" placeholder="Conte um pouco sobre você, sua experiência e objetivos..." readonly></textarea>
+                            <button type="button" class="edit-btn" onclick="toggleEdit('biografia')">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="form-section">
                     <h2>Competências</h2>
                     <div class="form-group">
                         <label for="competencias">Suas habilidades</label>
-                        <input type="text" id="competencias" placeholder="Ex: JavaScript, Python, Design Gráfico (separadas por vírgula)">
+                        <div class="input-with-edit">
+                            <input type="text" id="competencias" placeholder="Ex: JavaScript, Python, Design Gráfico (separadas por vírgula)" readonly>
+                            <button type="button" class="edit-btn" onclick="toggleEdit('competencias')">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                     <div class="tags-preview" id="tagsPreview"></div>
                 </div>
