feat: adds new features

--- a/pages/project-payment/project-payment-0.html
+++ b/pages/project-payment/project-payment-0.html
@@ -38,7 +38,7 @@
 
     <main>
         <nav>
-            <a class="item" href="../project/project.html" >
+            <a class="item" href="../projects-gallery/projects-gallery.html" >
                 Projeto
             </a>
             <a  class="item" href="../project-chat/project-chats.html">
