--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -40,7 +40,7 @@
 
     <main>
         <nav>
-            <a class="item" href="../project/projects-list.html" >
+            <a class="item" href="../projects-gallery/projects-gallery.html" >
                 Projetos
             </a>
             <a  class="item" href="../project-chat/project-chats.html">
@@ -60,45 +60,31 @@
             <div id="desc">
                 <h1>Nome do Projeto</h1>
                 <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque consequuntur, nemo nihil iste deleniti provident laboriosam repudiandae, rerum temporibus natus blanditiis consectetur eum placeat exercitationem iure, eaque odit dicta aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam architecto tenetur accusamus officiis at nulla nesciunt corporis vitae vel reprehenderit odio laudantium non, dignissimos perferendis sit maiores placeat ipsa cupiditate!
                 </span>
             </div>
             <div>
                 <h1>Cliente</h1>
-                <a href="">Cliente XXXX</a>
+                <a id="client" href=""></a>
             </div>
             <div>
                 <h1>Prazo</h1>
-                <label for="">30/01/2025 - 30/02/2025</label>
+                <label></label>
             </div>
             <div id="bar">
             </div>
             <div>
                 <h1>Desenvolvedor</h1>
-                <a href="">Programador Freelancer XXXX</a>
+                <a id="freelancer" href=""></a>
             </div>
             <div>
                 <h1>Tempo Restante</h1>
-                <label for="">7 Dias - 17 Horas - 23 Minutos - 34 Segundos</label>
+                <label></label>
             </div>
             <div>
                 <h1>
                     Categoria
                 </h1>
                 <div id="category">
-                
-                <article>
-                    Web
-                </article>
-                <article>
-                    Front-End 
-                </article>
-                <article>
-                    Back-End
-                </article>
-                <article>
-                    Full-Stack
-                </article>
                 </div>
             </div>
             <div>
@@ -106,8 +92,7 @@
                     Valor
                 </h1>
             
-                <label for="">
-                    R$XXXX.XX
+                <label>
                 </label>
             </div>
         </section>
@@ -152,6 +137,7 @@
         </div>
     </footer>
 </body>
+    <script src="../../src/config/env.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
     <script src="script-project.js"></script>
