feat: add empty message display and improve input handling in projects gallery

--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -39,6 +39,7 @@
 
 
     <main>
+        <p id="emptyMsg" class="empty-message" style="display: none;">Nenhum projeto encontrado</p>
         
     <button id="openModal" class="fixed-btn">+</button>
 
