--- a/pages/project-payment/project-payment-1.html
+++ b/pages/project-payment/project-payment-1.html
@@ -47,7 +47,7 @@
             <a  class="item" href="../project-payment/project-payment-0.html">
                 Pagamento
             </a>
-            <a  class="item" href="../project-file/project-file-0.html">
+            <a  class="item" href="project-file.html">
                 Arquivos
             </a>
         </nav>
@@ -57,23 +57,10 @@
                     Aguardando confirmação do banco...
                 </div>
             </div>
-            <div id="qr-code">
-                <img src="" alt="">
-            </div>
             <div>
                 <button id="chave-pix">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#46B1D5" d="M288 64C252.7 64 224 92.7 224 128L224 384C224 419.3 252.7 448 288 448L480 448C515.3 448 544 419.3 544 384L544 183.4C544 166 536.9 149.3 524.3 137.2L466.6 81.8C454.7 70.4 438.8 64 422.3 64L288 64zM160 192C124.7 192 96 220.7 96 256L96 512C96 547.3 124.7 576 160 576L352 576C387.3 576 416 547.3 416 512L416 496L352 496L352 512L160 512L160 256L176 256L176 192L160 192z"/></svg>
-                    Copiar chave pix
+                    Baixar comprovante
                 </button>
-            </div>
-            <div>
-                <div id="comprovante">
-                    <span>
-                        Anexar Comprovante
-                    </span>
-                <input type="file" id="pdf" accept=".pdf" name="pdf" placeholder="Adicionar Comprovante">
-
-                </div>
             </div>
             
 
