feat: Implement available projects page with user type validation and project filtering

--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -85,6 +85,13 @@
                 <a id="freelancer" href=""></a>
             </div>
             
+            <!-- Botão para adicionar freelancer ao projeto -->
+            <div id="add-freelancer-container" style="display: none;">
+                <button id="add-freelancer-btn" class="action-btn">
+                    Aceitar Solicitação
+                </button>
+            </div>
+            
             <div>
                 <h2>Tempo Restante</h2>
                 <label id="tempo-restante"></label>
