--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -126,6 +126,7 @@
         </div>
     </footer>
 </body>
+<script src="../../src/config/env.js"></script>
 <script src="../../src/scripts/notifications.js"></script>
 <script src="../../src/scripts/hamburger-menu.js"></script>
 <script src="script-index.js"></script>
