feat: Implement notification system with CRUD operations and UI updates

--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -22,8 +22,8 @@
             </svg>
         </div>
         <div class="icones">
-            <a href="" class="icone" id="lampada"></a>
-            <a href="#" class="icone" id="sino"></a>
+            <a href="#" class="icone" id="lampada"></a>
+            <a href="../notification/notification.html" class="icone" id="sino"></a>
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
@@ -47,7 +47,7 @@
                     <div class="tags" id="userTags">
                         <span class="tag">Adicione suas competências</span>
                     </div>
-                    <div class="edit-profile">
+                    <div class="edit-profile" id="edit-profile-section">
                         <a href="edit-perfil.html" class="edit-btn">Editar Perfil</a>
                     </div>
                 </div>
