--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -31,7 +31,7 @@
     <div></div>
     <div class="icones">
       <a href="" class="icone" id="lampada"></a>
-      <a href="" class="icone" id="sino"></a>
+      <a href="../notification/notification.html" class="icone" id="sino"></a>
       <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
     </div>
     
