--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -28,13 +28,11 @@
             </svg>
         </div>
         <div class="icones">
-                <a href="" class="icone" id="lampada"></a>
-                <a href="" class="icone" id="sino"></a>
-                <button id="authButton" class="auth-btn"></button>
-                <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
-        </div>
-        
-        <div id="hamburger-menu" class="hamburger-menu">
+            <a href="" class="icone" id="lampada"></a>
+            <a href="../notification/notification.html" class="icone" id="sino"></a>
+            <button id="authButton" class="auth-btn"></button>
+            <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+        </div>        <div id="hamburger-menu" class="hamburger-menu">
         </div>
     </header>
 
