--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -31,7 +31,7 @@
         <div class="icones">
             
                 <a href="projects-page.html" class="icone" id="lampada"></a>
-                <a href="" class="icone" id="sino"></a>
+                <a href="../notification/notification.html" class="icone" id="sino"></a>
                 <a class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         <div id="hamburger-menu" class="hamburger-menu"></div>
