--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -28,7 +28,7 @@
         </div>
         <div class="icones">
             <a href="../projects-gallery/projects-gallery.html" class="icone" id="lampada"></a>
-            <a href="" class="icone" id="sino"></a>
+            <a href="../notification/notification.html" class="icone" id="sino"></a>
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
