--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -119,6 +119,7 @@
     </footer>
 
     <script src="../../src/config/env.js"></script>
+    <script src="../../src/scripts/websocket-notifications.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
     <script src="script-available-projects.js"></script>
