--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -186,6 +186,7 @@
     </footer>
 </body>
 <script src="../../src/config/env.js"></script>
+<script src="../../src/scripts/websocket-notifications.js"></script>
 <script src="../../src/scripts/notifications.js"></script>
 <script src="../../src/scripts/hamburger-menu.js"></script>
 <script src="edit-perfil.js"></script>
