--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -99,6 +99,7 @@
   </footer>
 
   <script src="../../src/config/env.js"></script>
+  <script src="../../src/scripts/websocket-notifications.js"></script>
   <script src="../../src/scripts/notifications.js"></script>
   <script src="../../src/scripts/hamburger-menu.js"></script>
   <script src="project-chats.js"></script>
