--- a/pages/project-file/project-file-0.html
+++ b/pages/project-file/project-file-0.html
@@ -113,6 +113,7 @@
     </footer>
 </body>
     <script src="../../src/config/env.js"></script>
+    <script src="../../src/scripts/websocket-notifications.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
     <script src="script-project.js"></script>
