--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -156,6 +156,7 @@
 
 </body>
     <script src="../../src/config/env.js"></script>
+    <script src="../../src/scripts/websocket-notifications.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
     <script src="script-projects-gallery.js"></script>
