--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -43,6 +43,7 @@
     </main>
 </body>
     <script src="../../src/config/env.js"></script>
+    <script src="../../src/scripts/presence-manager.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="script-login.js"></script>
 </html>
