feat: Add presence manager initialization to enhance user online/offline tracking across pages

--- a/pages/project-payment/project-payment-1.html
+++ b/pages/project-payment/project-payment-1.html
@@ -105,6 +105,7 @@
     </footer>
 </body>
     <script src="../../src/config/env.js"></script>
+    <script src="../../src/scripts/presence-manager.js"></script>
     <script src="../../src/scripts/websocket-notifications.js"></script>
     <script src="../../src/scripts/notifications.js"></script>
     <script src="../../src/scripts/hamburger-menu.js"></script>
