Refactor navigation links to point to the new index.html structure
- Updated all HTML files to change navigation links from "../home/index.html" to "../../index.html".
- Adjusted JavaScript redirection paths in project-chat and project-payment scripts to reflect the new index.html location.
- Added a new index.html file with the main structure and styles for the application.
- Created a new script-index.js to manage authentication button visibility and actions.
- Introduced a comprehensive style.css file for consistent styling across the application.

--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="ReLaunch Logo" id="logo">
             </a>
         </div>
@@ -76,7 +76,7 @@
 
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="ReLaunch" id="logo">
             </a>
         </div>
