--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -18,7 +18,7 @@
     <header>
 
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
@@ -87,7 +87,7 @@
 
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
