--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -17,7 +17,7 @@
     <header>
 
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
@@ -115,7 +115,7 @@
 
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
