--- a/pages/notification/notification.html
+++ b/pages/notification/notification.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
@@ -113,7 +113,7 @@
 
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
