--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
@@ -149,7 +149,7 @@
     </div>
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
