--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -11,7 +11,7 @@
 <body>
      <header>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
@@ -62,7 +62,7 @@
     </main>
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
