--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div>
-      <a href="../home/index.html">
+      <a href="../../index.html">
         <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
       </a>
     </div>
@@ -56,7 +56,7 @@
 
   <footer>
     <div>
-      <a href="../home/index.html">
+      <a href="../../index.html">
         <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
       </a>
     </div>
