--- a/pages/project-payment/project-payment-0.html
+++ b/pages/project-payment/project-payment-0.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
@@ -83,7 +83,7 @@
 
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
