--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -18,7 +18,7 @@
     <header>
 
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
             </a>
         </div>
@@ -116,7 +116,7 @@
     </main>
     <footer>
         <div>
-            <a href="../home/index.html">
+            <a href="../../index.html">
                 <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
