--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <div>
-            <a href="../home/index.html" class="relaunch">
+            <a href="../../index.html" class="relaunch">
                 <span class="primeiras-duas">Re</span>Launch
             </a>
         </div>
