Refactor code structure for improved readability and maintainability

--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Perfil - ReLaunch</title>
-    <link rel="stylesheet" href="perfil.css">
-    <link rel="stylesheet" href="edit-perfil.css">
-    <link rel="stylesheet" href="../../src/components/notifications.css">
-    <link rel="stylesheet" href="../../src/components/hamburger-menu.css">
+    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
+    <link rel="stylesheet" href="/pages/perfil/perfil.css">
+    <link rel="stylesheet" href="/pages/perfil/edit-perfil.css">
+    <link rel="stylesheet" href="/src/components/notifications.css">
+    <link rel="stylesheet" href="/src/components/hamburger-menu.css">
 </head>
 <body>
     <header>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
+            <a href="/home">
+                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -149,8 +150,8 @@
     </div>
     <footer>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
+            <a href="/home">
+                <img src="/src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
         <div>
@@ -177,7 +178,7 @@
             </a>
         </div>
         <div>
-            <img src="../../src/images/planeta-terra (1).png" alt="">
+            <img src="/src/images/planeta-terra-1.png" alt="">
             <select id="idioma" name="idioma">
                 <option value="pt" selected style="background-color: #2A3B41;">Português</option>
                 <option value="en" style="background-color: #2A3B41;">Inglês</option>
@@ -185,10 +186,10 @@
         </div>
     </footer>
 </body>
-<script src="../../src/config/env.js"></script>
-<script src="../../src/scripts/presence-manager.js"></script>
-<script src="../../src/scripts/websocket-notifications.js"></script>
-<script src="../../src/scripts/notifications.js"></script>
-<script src="../../src/scripts/hamburger-menu.js"></script>
-<script src="edit-perfil.js"></script>
+<script src="/src/config/env.js"></script>
+<script src="/src/scripts/presence-manager.js"></script>
+<script src="/src/scripts/websocket-notifications.js"></script>
+<script src="/src/scripts/notifications.js"></script>
+<script src="/src/scripts/hamburger-menu.js"></script>
+<script src="/pages/perfil/edit-perfil.js"></script>
 </html>
