--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReLaunch Entrar</title>
+    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="../../src/components/notifications.css">
+    <link rel="stylesheet" href="/pages/login/login.css">
+    <link rel="stylesheet" href="/src/components/notifications.css">
 </head>
 <body>
     <main>
         <div>
-            <a href="../../index.html" class="relaunch">
+            <a href="/home" class="relaunch">
                 <span class="primeiras-duas">Re</span>Launch
             </a>
         </div>
@@ -42,8 +43,8 @@
         </div>
     </main>
 </body>
-    <script src="../../src/config/env.js"></script>
-    <script src="../../src/scripts/presence-manager.js"></script>
-    <script src="../../src/scripts/notifications.js"></script>
-    <script src="script-login.js"></script>
+    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/presence-manager.js"></script>
+    <script src="/src/scripts/notifications.js"></script>
+    <script src="/pages/login/script-login.js"></script>
 </html>
