--- a/pages/notification/notification.html
+++ b/pages/notification/notification.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notificações</title>
+    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="notification.css">
-    <link rel="stylesheet" href="../../src/components/hamburger-menu.css">
-    <link rel="stylesheet" href="../../src/components/notifications.css">
+    <link rel="stylesheet" href="/pages/notification/notification.css">
+    <link rel="stylesheet" href="/src/components/hamburger-menu.css">
+    <link rel="stylesheet" href="/src/components/notifications.css">
 
 </head>
 <body>
     <header>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
+            <a href="/home">
+                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -113,8 +114,8 @@
 
     <footer>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
+            <a href="/home">
+                <img src="/src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
         <div>
@@ -142,7 +143,7 @@
             </a>
         </div>
         <div>
-            <img src="../../src/images/planeta-terra.png" alt="">
+            <img src="/src/images/planeta-terra.png" alt="">
         <select id="idioma" name="idioma">
             <option value="pt" selected style="background-color: #2A3B41;">Português</option>
             <option value="en" style="background-color: #2A3B41;">Inglês</option>
@@ -150,11 +151,11 @@
         </div>
     </footer>
 
-    <script src="../../src/config/env.js"></script>
-    <script src="../../src/scripts/presence-manager.js"></script>
-    <script src="../../src/scripts/websocket-notifications.js"></script>
-    <script src="../../src/scripts/notifications.js"></script>
-    <script src="../../src/scripts/hamburger-menu.js"></script>
-    <script src="script-notification.js"></script>
+    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/presence-manager.js"></script>
+    <script src="/src/scripts/websocket-notifications.js"></script>
+    <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/hamburger-menu.js"></script>
+    <script src="/pages/notification/script-notification.js"></script>
 </body>
 </html>
