--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chats - ReLaunch</title>
+    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../src/components/notifications.css">
-  <link rel="stylesheet" href="../../src/components/hamburger-menu.css">
-  <link rel="stylesheet" href="project-chat.css">
-  <link rel="stylesheet" href="project-chats.css">
+  <link rel="stylesheet" href="/src/components/notifications.css">
+  <link rel="stylesheet" href="/src/components/hamburger-menu.css">
+  <link rel="stylesheet" href="/pages/project-chat/project-chat.css">
+  <link rel="stylesheet" href="/pages/project-chat/project-chats.css">
 </head>
 <body>
   <header>
     <div>
-      <a href="../../index.html">
-        <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="Logo ReLaunch" id="logo">
+      <a href="/home">
+        <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="Logo ReLaunch" id="logo">
       </a>
     </div>
     <div></div>
@@ -56,8 +57,8 @@
 
   <footer>
     <div>
-      <a href="../../index.html">
-        <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
+      <a href="/home">
+        <img src="/src/images/NomeBackgroundEscuro.png" alt="" id="logo">
       </a>
     </div>
     <div>
@@ -90,7 +91,7 @@
       </a>
     </div>
     <div>
-      <img src="../../src/images/planeta-terra (1).png" alt="">
+      <img src="/src/images/planeta-terra-1.png" alt="">
       <select id="idioma" name="idioma">
         <option value="pt" selected style="background-color: #2A3B41;">Português</option>
         <option value="en" style="background-color: #2A3B41;">Inglês</option>
@@ -98,11 +99,11 @@
     </div>
   </footer>
 
-  <script src="../../src/config/env.js"></script>
-  <script src="../../src/scripts/presence-manager.js"></script>
-  <script src="../../src/scripts/websocket-notifications.js"></script>
-  <script src="../../src/scripts/notifications.js"></script>
-  <script src="../../src/scripts/hamburger-menu.js"></script>
-  <script src="project-chats.js"></script>
+  <script src="/src/config/env.js"></script>
+  <script src="/src/scripts/presence-manager.js"></script>
+  <script src="/src/scripts/websocket-notifications.js"></script>
+  <script src="/src/scripts/notifications.js"></script>
+  <script src="/src/scripts/hamburger-menu.js"></script>
+  <script src="/pages/project-chat/project-chats.js"></script>
 </body>
 </html>
