--- a/pages/project-payment/project-payment-1.html
+++ b/pages/project-payment/project-payment-1.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReLaunch Project</title>
+    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="project-payment.css">
-    <link rel="stylesheet" href="../../src/components/notifications.css">
-    <link rel="stylesheet" href="../../src/components/hamburger-menu.css">
+    <link rel="stylesheet" href="/pages/project-payment/project-payment.css">
+    <link rel="stylesheet" href="/src/components/notifications.css">
+    <link rel="stylesheet" href="/src/components/hamburger-menu.css">
 </head>
 <body>
     <header>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/ReLaunch Logo Nomo Colorido Invertido.png" alt="" id="logo">
+            <a href="/home">
+                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -70,8 +71,8 @@
 
     <footer>
         <div>
-            <a href="../../index.html">
-                <img src="../../src/images/NomeBackgroundEscuro.png" alt="" id="logo">
+            <a href="/home">
+                <img src="/src/images/NomeBackgroundEscuro.png" alt="" id="logo">
             </a>
         </div>
         <div>
@@ -96,7 +97,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M173.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM252.8 8c-138.7 0-244.8 105.3-244.8 244 0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1 100-33.2 167.8-128.1 167.8-239 0-138.7-112.5-244-251.2-244zM105.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9s4.3 3.3 5.6 2.3c1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>            </a>
         </div>
         <div>
-            <img src="../../src/images/planeta-terra.png" alt="">
+            <img src="/src/images/planeta-terra.png" alt="">
             <select id="idioma" name="idioma">
                 <option value="pt" selected style="background-color: #2A3B41;">Português</option>
                 <option value="en" style="background-color: #2A3B41;">Inglês</option>
@@ -104,11 +105,11 @@
         </div>
     </footer>
 </body>
-    <script src="../../src/config/env.js"></script>
-    <script src="../../src/scripts/presence-manager.js"></script>
-    <script src="../../src/scripts/websocket-notifications.js"></script>
-    <script src="../../src/scripts/notifications.js"></script>
-    <script src="../../src/scripts/hamburger-menu.js"></script>
-    <script src="script-project.js"></script>
-    <script src="script-project-payment.js"></script>
+    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/presence-manager.js"></script>
+    <script src="/src/scripts/websocket-notifications.js"></script>
+    <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/hamburger-menu.js"></script>
+    <script src="/pages/project-payment/script-project.js"></script>
+    <script src="/pages/project-payment/script-project-payment.js"></script>
 </html>
